--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,8 +13,17 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
-      
+
     - name: Build Docker image
       run: |
         docker build -t demo-app:latest .
         docker images  # List images to verify it was built
+    
+# use trivy to scan the image and halt if any vulnerabilities are found
+    - name: Scan Docker image with Trivy
+      uses: aquasecurity/trivy-action@v2
+      with:
+        scan-type: "image"
+        image-ref: "demo-app:latest"
+        format: "table"
+
